--- a/ST10445050_CLDV6212_POE_Part1/Views/Customers/AddCustomer.cshtml
+++ b/ST10445050_CLDV6212_POE_Part1/Views/Customers/AddCustomer.cshtml
@@ -2,7 +2,7 @@
 
 @{
     ViewData["Title"] = "Add A New Customer";
-    Layout = "~/Views/Shared/_Layout.cshtml"; // Call the shared layout with navbar & footer
+    Layout = "~/Views/Shared/_Layout.cshtml"; 
 }
 
 <!-- Page Content -->
