--- a/ST10445050_CLDV6212_POE_Part1/Views/Orders/Details.cshtml
+++ b/ST10445050_CLDV6212_POE_Part1/Views/Orders/Details.cshtml
@@ -21,11 +21,11 @@
                 <dt class="col-sm-3">Product ID</dt>
                 <dd class="col-sm-9">@Model.productID</dd>
 
-                <dt class="col-sm-3">Delivery Date</dt>
-                <dd class="col-sm-9">@Model.deliveryDate.ToString("yyyy-MM-dd HH:mm")</dd>
+                <dt class="col-sm-3">Quantity</dt>
+                <dd class="col-sm-9">@Model.quantity</dd>
 
-                <dt class="col-sm-3">Delivery Address</dt>
-                <dd class="col-sm-9">@Model.deliveryAddress</dd>
+                <dt class="col-sm-3">Order Date</dt>
+                <dd class="col-sm-9">@Model.orderDate.ToString("yyyy-MM-dd HH:mm")</dd>
 
                 <dt class="col-sm-3">Order Total</dt>
                 <dd class="col-sm-9">@($"R{Model.orderTotal:N2}")</dd>
