--- a/ST10445050_CLDV6212_POE_Part1/Views/Customers/DeleteCustomer.cshtml
+++ b/ST10445050_CLDV6212_POE_Part1/Views/Customers/DeleteCustomer.cshtml
@@ -2,7 +2,7 @@
 
 @{
     ViewData["Title"] = "Delete Customer";
-    Layout = "~/Views/Shared/_Layout.cshtml"; // Use shared layout
+    Layout = "~/Views/Shared/_Layout.cshtml"; 
 }
 
 <div class="container mt-4">
