--- a/ST10445050_CLDV6212_POE_Part1/Views/Home/Index.cshtml
+++ b/ST10445050_CLDV6212_POE_Part1/Views/Home/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@{
     ViewData["Title"] = "Home Page";
-    Layout = "~/Views/Shared/_Layout.cshtml"; // Call your shared layout
+    Layout = "~/Views/Shared/_Layout.cshtml"; 
 }
 
 <!-- Hero Section -->
